projects/compiler/test/typechecker/invocation/error_macro_cannot_run.2.out
Error at %FILE_NAME%:3:14
Type mismatch
  |  val _: Int = "123"
                  ^
Expected: Int
but instead found: String

Error at %FILE_NAME%:10:13
Macro 'uhOh' cannot produce valid code at this invocation site
  |  val x = uhOh() + 1
                 ^
The module in which the macro is defined has errors
