projects/compiler/test/typechecker/invocation/error_macro_cannot_run.2.abra
import macro, InjectedCode from "meta"

val _: Int = "123"

@macro
func uhOh(): InjectedCode {
  InjectedCode.new().append("123")
}

val x = uhOh() + 1
